Deploy infra job lines 48/49 re-add. Template param additions lines 43-48.

--- a/resume-infra/template.yaml
+++ b/resume-infra/template.yaml
@@ -40,6 +40,12 @@ Parameters:
   OrgId:
     Type: String
     Description: "AWS Organizations ID (e.g., o-abc123xyz)"
+  TestAccountId:
+    Type: String
+    Default: ""   # must be passed in at deploy
+  ProdAccountId:
+    Type: String
+    Default: ""
   DeployRolePattern:
     Type: String
     Default: "GitHubActionsDeployer"   # exact role name you use in each account
