--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
                 EnvironmentName=eng \
                 OrgId=${{ secrets.ORG_ID }} \
                 DeployRolePattern=GitHubActionsDeployer \
+                TestAccountId=${{ secrets.TEST_ACCOUNT_ID}} \
+                ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} 
             --no-confirm-changeset \
             --resolve-s3 \
             --stack-name cloud-resume-infra \
