Deploy infra job --stack-name fix.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
                 ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} 
             --no-confirm-changeset \
             --resolve-s3 \
-            --stack-name cloud-resume-infra \
+            --stack-name \
             --no-fail-on-empty-changeset \
             --region "${{ env.AWS_REGION }}"
 
