Deploy infra job AWS_ROLE_TEST/PROD added.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,10 +46,12 @@ jobs:
                 OrgId=${{ secrets.ORG_ID }} \
                 DeployRolePattern=GitHubActionsDeployer \
                 TestAccountId=${{ secrets.TEST_ACCOUNT_ID}} \
-                ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} 
+                ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} \
+                TestDeployRoleArn=${{ secrets.AWS_ROLE_TEST }} \
+                ProdDeployRoleArn=${{ secrets.AWS_ROLE_PROD }} \
             --no-confirm-changeset \
             --resolve-s3 \
-            --stack-name \
+            --stack-name cloud-resume-infra \
             --no-fail-on-empty-changeset \
             --region "${{ env.AWS_REGION }}"
 
