Deploy infra job syntax adjustment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
                 DeployRolePattern=GitHubActionsDeployer \
                 TestAccountId=${{ secrets.TEST_ACCOUNT_ID}} \
                 ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} \
-                TestDeployRoleArn=${{ secrets.AWS_ROLE_TEST }} \
-                ProdDeployRoleArn=${{ secrets.AWS_ROLE_PROD }} \
+                TestDeployRoleArn=${{ secrets.AWS_ROLE_TEST}} \
+                ProdDeployRoleArn=${{ secrets.AWS_ROLE_PROD}}
             --no-confirm-changeset \
             --resolve-s3 \
             --stack-name cloud-resume-infra \
