--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
                 TestAccountId=${{ secrets.TEST_ACCOUNT_ID}} \
                 ProdAccountId=${{ secrets.PROD_ACCOUNT_ID}} \
                 TestDeployRoleArn=${{ secrets.AWS_ROLE_ENG_TEST}} \
-                ProdDeployRoleArn=${{ secrets.AWS_ROLE_ENG_PROD}}
+                ProdDeployRoleArn=${{ secrets.AWS_ROLE_ENG_PROD}} \
             --no-confirm-changeset \
             --resolve-s3 \
             --stack-name cloud-resume-infra \
