--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,11 @@ jobs:
       - name: Sync site
         run: aws s3 sync resume-site/ s3://${{ steps.get_bucket.outputs.bucket }} --delete
 
+      - name: Persist frontend bundle by SHA (ENG, main only)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          aws s3 sync resume-site/ "s3://${PROMO_BUCKET}/${APP_PREFIX}/${GITHUB_SHA}/site/" --delete
+
       - name: Invalidate CF
         run: aws cloudfront create-invalidation --distribution-id ${{ steps.get_distribution.outputs.distribution_id }} --paths "/*"
 
