Promotion pipeline enhancement, skip ENG redeploy on merge.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
 
       # 1) Deploy first. --resolve-s3 lets SAM create/use a managed bucket
       - name: Deploy infra (ENG) with OrgId + role pattern
+        if: github.ref != 'refs/heads/main'
         working-directory: resume-infra
         run: |
           sam deploy \
@@ -96,6 +97,7 @@ jobs:
             --query "Stacks[0].Outputs[?OutputKey=='CloudFrontDistributionId'].OutputValue" --output text)" >> $GITHUB_OUTPUT
 
       - name: Sync site
+        if: github.ref != 'refs/heads/main'
         run: aws s3 sync resume-site/ s3://${{ steps.get_bucket.outputs.bucket }} --delete
 
       - name: Persist frontend bundle by SHA (ENG, main only)
@@ -104,6 +106,7 @@ jobs:
           aws s3 sync resume-site/ "s3://${PROMO_BUCKET}/${APP_PREFIX}/${GITHUB_SHA}/site/" --delete
 
       - name: Invalidate CF
+        if: github.ref != 'refs/heads/main'
         run: aws cloudfront create-invalidation --distribution-id ${{ steps.get_distribution.outputs.distribution_id }} --paths "/*"
 
       - name: Get CF domain
