--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -22,7 +22,7 @@ env:
 jobs:
   redeploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment }}   # keeps your approvals
+    environment: ${{ github.event.inputs.environment }}   # keeps approvals
     permissions: { id-token: write, contents: read }
 
     steps:
@@ -31,7 +31,9 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets[format('AWS_ROLE_{0}', github.event.inputs.environment)] }}
 
+      # 1) Resolve artifact and expose the matched SHA as a step output
       - name: Resolve & download packaged.yaml (allow short SHA)
+        id: resolve
         run: |
           set -euo pipefail
           BASE="s3://${PROMO_BUCKET}/${APP_PREFIX}/"
@@ -43,8 +45,10 @@ jobs:
             exit 1
           fi
           echo "Using SHA: $MATCH"
+          echo "match=$MATCH" >> "$GITHUB_OUTPUT"
           aws s3 cp "s3://${PROMO_BUCKET}/${APP_PREFIX}/${MATCH}/packaged.yaml" packaged.yaml
 
+      # 2) Infra rollback (deploy the selected packaged.yaml)
       - name: Deploy selected infra artifact (CloudFormation)
         run: |
           aws cloudformation deploy \
@@ -54,8 +58,9 @@ jobs:
             --parameter-overrides EnvironmentName=${{ github.event.inputs.environment }} \
             --no-fail-on-empty-changeset
 
+      # 3) Discover hosting bucket and CloudFront distribution; expose as outputs
       - name: Locate hosting bucket & distribution (current env)
-        id: outputs
+        id: discover
         run: |
           set -euo pipefail
           BUCKET=$(aws cloudformation describe-stacks \
@@ -66,24 +71,32 @@ jobs:
             --stack-name "${STACK_NAME}" \
             --query "Stacks[0].Outputs[?OutputKey=='CloudFrontDistributionId'].OutputValue" \
             --output text)
-          echo "bucket=$BUCKET" >> $GITHUB_OUTPUT
-          echo "dist_id=$DIST"  >> $GITHUB_OUTPUT
+          echo "bucket=$BUCKET" >> "$GITHUB_OUTPUT"
+          echo "dist_id=$DIST"  >> "$GITHUB_OUTPUT"
 
+      # 4) Optional frontend rollback from the same SHA (if site snapshot exists)
       - name: Restore frontend files for selected SHA (if present)
+        env:
+          MATCH_SHA: ${{ steps.resolve.outputs.match }}
+          DEST_BUCKET: ${{ steps.discover.outputs.bucket }}
         run: |
           set -euo pipefail
-          SRC_PREFIX="s3://${PROMO_BUCKET}/${APP_PREFIX}/${MATCH}/site/"
-          # If the 'site/' snapshot exists, sync it back to the live hosting bucket
+          if [ -z "${MATCH_SHA:-}" ] || [ "${MATCH_SHA}" = "None" ]; then
+            echo "No resolved SHA from 'resolve' step; skipping site restore."
+            exit 0
+          fi
+          SRC_PREFIX="s3://${PROMO_BUCKET}/${APP_PREFIX}/${MATCH_SHA}/site/"
           if aws s3 ls "$SRC_PREFIX" >/dev/null 2>&1; then
-            echo "Restoring frontend from $SRC_PREFIX"
-            aws s3 sync "$SRC_PREFIX" "s3://${{ steps.outputs.outputs.bucket }}" --delete
+            echo "Restoring frontend from $SRC_PREFIX -> s3://${DEST_BUCKET}"
+            aws s3 sync "$SRC_PREFIX" "s3://${DEST_BUCKET}" --delete
           else
             echo "No frontend snapshot found at $SRC_PREFIX; skipping site restore."
           fi
 
+      # 5) Make the rollback visible
       - name: Invalidate CloudFront (make rollback visible)
-        if: ${{ steps.outputs.outputs.dist_id != '' }}
+        if: ${{ steps.discover.outputs.dist_id && steps.discover.outputs.dist_id != 'None' }}
         run: |
           aws cloudfront create-invalidation \
-            --distribution-id "${{ steps.outputs.outputs.dist_id }}" \
+            --distribution-id "${{ steps.discover.outputs.dist_id }}" \
             --paths "/*"
